se agregaron las cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
 body{
     background-image: url("js/img/vecteezy_dragon-ball-landscape-scene-background_20793913.jpg");
 }
+
+contenedor-data{
+    height: 100px;
+}
